style and displayed automatically the first time ok

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,6 +25,12 @@
             <p>Ut feugiat sem id urna semper, sed blandit nunc consectetur.</p>
             <p>Donec et convallis risus. Aenean eros odio, luctus ac vulputate quis, eleifend quis odio.</p>
             <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam pellentesque ac ligula vel mollis.</p>
+            <p>Ut feugiat sem id urna semper, sed blandit nunc consectetur.</p>
+            <p>Donec et convallis risus. Aenean eros odio, luctus ac vulputate quis, eleifend quis odio.</p>
+            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam pellentesque ac ligula vel mollis.</p>
+            
         </div>
     </feature-tip>
 </ion-content>
+
+
